    address to the WebKDC to the WebKDC log messages whenever processing
    XML requests.

 *) Document the log messages from the WebKDC in the mod_webkdc manual.

 *) Handle the renaming of ap_run_http_method to ap_run_http_scheme so
    that WebAuth will compile under Apache 2.2.  Thanks to Jim Rodgers for
    the patch.

 *) Remove duplicate defininitions from src/modules/webauth/mod_webauth.h.
    Thanks to Robert A. Basch for the patch.

WebAuth 3.5.2 (2006-07-13)

 *) SECURITY: Modify the default templates to add ESCAPE=HTML when
    inserting the values of variables.  Without telling HTML::Template to
    escape values in this fashion, a cross-site scripting attack is
    possible with at least the username field of the login form.  Any site
    using customized templates should make the equivalent change to their
    templates.

 *) Set Pragma: no-cache and Cache-Control: no-cache in the HTTP headers
    of all responses from the Weblogin scripts.  This is particularly
    important for the logout script, since otherwise browsers may cache
    the logout page and not actually be logged out.

 *) Don't ever redirect the user to the URL that attempts Apache
    authentication if they've already submitted the login form, even if
    they didn't supply a username or password.  Once the user reaches the
    login page, the page flow should keep them there until they log in
    with username and password.

WebAuth 3.5.1 (2006-06-20)

 *) Allow the submit button on the login page to return any value rather
    than requiring it have the value "Login" so that the template can be
    more easily translated.  Instead, the login form must include the tag:

        <input type="hidden" name="login" value="yes">

    The form for attempting Apache remote-user authentication should not
    contain this tag.  Existing login.tmpl files must be updated
    accordingly when upgrading to this version of the Weblogin server.
